...
        minWidth: 200,
        backgroundColor: "#000",
      }}
    >
      <WebView
        ref={webview}
        testID="player-webview"
        source={{ html: source.html, baseUrl: source.baseUrl }}
        originWhitelist={["https://*"]}
        javaScriptEnabled
        allowsInlineMediaPlayback
        mediaPlaybackRequiresUserAction={false}
        allowsFullscreenVideo
...
